korjattu yksi bugi hipsukka signup/ perässä

--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -9,7 +9,7 @@
 {% else %}
     <p>You must login first.</p>
     <p><a href="{% url 'login' %}">Login</a></p>
-    <p><a href="{% url 'signup' %}'">Create a new Account</a></p>
+    <p><a href="{% url 'signup' %}">Create a new Account</a></p>
 {% endif %}
 
 <h2>Apps Gallery </h2>
